--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "homepage":"https://yashgupta13.github.io/bhavna-welfare-foundation",
+  "homepage": "https://yashgupta13/github.io/bhavna-welfare-foundation",
   "name": "bhavna-welfare-foundation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,9 +19,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
     "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "deploy":"gh-pages -d dist ",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
